# its_ai_bro

./: readme.md  team.txt
autonomy_repo/: CMakeLists.txt
autonomy_repo/launch/: frontier_explorer_launch_vale.py  frontier_explorer_vale.launch.py
autonomy_repo/scripts/: frontier_explorer.py  frontier_explorer2.py  frontier_explorer_vale.py  heading_controller.py  navigator.py  p3_plot.py  perception_controller.py
s2_basic/: CMakeLists.txt  package.xml
s2_basic/scripts/: constant_control.py
s2_basic/scripts/install/: local_setup.sh  setup.sh
s2_basic/scripts/log/: latest_build
s3_basic/: CMakeLists.txt  package.xml
s3_basic/launch/: section3.launch.py
s3_basic/rviz/: section3.rviz
s3_basic/scripts/: constant_control.py
scripts/: cleanup.sh  section1.py
